corrextion de l'affichage de passif